fix input collapse and non default value (#6238)

--- a/frontend/src/scenes/insights/ActionFilter/ActionFilterRow/index.scss
+++ b/frontend/src/scenes/insights/ActionFilter/ActionFilterRow/index.scss
@@ -41,6 +41,7 @@
 
     &.horizontal-ui {
         width: unset !important;
+        min-width: 120px;
         margin-top: 0;
 
         .ant-select-selector,
